# search-ai

./: .env  README.md  install.sh  pyproject.toml  setup.cfg
search_ai/: __init__.py
search_ai/src/: __init__.py  main.py
search_ai/src/agents/: base_agent.py
search_ai/src/huggy_llm/: _base_huggy_chat.py  _base_login.py
search_ai/src/prompts/: query_refiner.py
src/inqs/: __init__.py  main.py  net_neuron.py
src/inqs/huggy_llm/: __init__.py  _base_huggy_chat.py
tests/: check_pip.py
